--- a/dada/extras/documentation/pod_source/install_dada_mail.pod
+++ b/dada/extras/documentation/pod_source/install_dada_mail.pod
@@ -336,7 +336,7 @@ This screencast goes step by step, slowly through the entire process of installi
 An alternative, command line interface is available, instructions can be 
 found on how to use it, by invoking the script with the, C<--help> flag, 
 
- shell>./installer.cgi --help
+ shell>./install.cgi --help
 
 most of the options available on the web-based interface are available in the command line interface, except the installation of the plugins/extensions. 
 
