--- a/dada/extras/documentation/pod_source/changes_6_x.pod
+++ b/dada/extras/documentation/pod_source/changes_6_x.pod
@@ -1,8 +1,8 @@
 =head1 6.4.0
 
-=head2 Summary 6.4.0 Beta 1
+=head2 Summary 6.4.0 Beta 2
 
-=head2 Features 6.4.0 Beta 1
+=head2 Features 6.4.0 Beta 2
 
 =head3 Unsubscription Process: Vastly Simplified
 
@@ -59,17 +59,18 @@ Partial List Sending has now been expanded to allow you to search both with what
 
 You may now search for more than one term, per field, at one time - example: a First Name of either I<Justin>, OR I<John>. This is done by simply listing the various search terms you'd like, separated by a comma. For example, First Name is Like B<Justin,John>
 
+=head2 Bugfixes 6.4.0
+
+=head3 Non-ASCII header fields of sent message are not MIME-encoded
+
+L<https://github.com/justingit/dada-mail/issues/322>
+
 =head1 6.3.1
 
 =head2 Summary 6.3.1
 
 This release fixes bugs found in the v6.3.0 version of Dada Mail. It's a suggested upgrade for anyone running v6.3.0 or lower.
 
-=head2 Bugfixes 6.3.1
-
-=head3 Sending Subscription Approval/Denial messages causes server error
-
-L<https://github.com/justingit/dada-mail/issues/370>
 
 =head3 SQL Table schema checker looks for wrong # of needed tables (off by one, problem)
 
