--- a/dada/extras/documentation/pod_source/upgrade_dada_mail.pod
+++ b/dada/extras/documentation/pod_source/upgrade_dada_mail.pod
@@ -9,7 +9,7 @@ These docs will guide you through an installation of Dada Mail, originally insta
 =begin html
 
 <div class="see_also">
-<p> For information on how to upgrade Dada Mail from an install that wasn't done using the inclused Dada Mail Installer, see, <a href="./FAQ-install_upgrade.pod.html#upgrading_dada_mail_from_different_installation_types">Upgrading Dada Mail From Different Installation Types</a></p>
+<p> For information on how to upgrade Dada Mail from an install that wasn't done using the included Dada Mail Installer, see, <a href="./FAQ-install_upgrade.pod.html#upgrading_dada_mail_from_different_installation_types">Upgrading Dada Mail From Different Installation Types</a></p>
 </div> 
 
 =end html
