--- a/dada/extras/documentation/pod_source/changes_6_x.pod
+++ b/dada/extras/documentation/pod_source/changes_6_x.pod
@@ -1,8 +1,16 @@
-=head1 6.5.0 alpha 2
+=head1 6.5.0 alpha 3
 
-=head2 Summary 6.5.0 alpha 2
+=head2 Summary 6.5.0 alpha 3
 
-=head2 Features 6.5.0 alpha 2
+=head2 Features 6.5.0 alpha 3
+
+=head3 New Plugin: Global Config
+
+B<Global Config> is a new plugin for Dada Mail. It allows you to easily drop back into Dada Mail's included Installer, letting you reconfigure Dada Mail's global configuration. 
+
+This plugin itself is itself can be installed via the Dada Mail Installer. 
+
+=head3 Enhanced Installer: More Configuration Options
 
 This version of Dada Mail features many additional configuration options available when using the included Installer: 
 
@@ -83,6 +91,35 @@ Enable/Disable the following Profile Features:
 These global paramaters can be read from previous configurations, and can be editing using the installer or directly in the C<.dada_config> file. 
 
 =back
+
+=head3 Client-Side Form Validation
+
+Dada Mail now includes the B<jQuery Validation Plugin>, and uses this plugin for client-side form validation in the Dada Mail Installer, Subscription form, Create a New List form, and the various Dada Mail Profile forms. I<(Server-side validation is still there)>
+
+=head3 Mailing List Switcher Form Enhanced
+
+Dada Mail now includes the B<Select2 jQuery Plugin>, and utilizes it in the Mailing List Switch Form you'll see in the upper right hand corner of the List Control Panel. With this plugin, it's now easier to find the mailing list you'd like to work with, especially if you have many dozens of mailing lists running on your Dada Mail. The enhancement allows you to search through the available mailing lists, rather than just simply scrolling through them. 
+
+=head2 Changes 6.5.0 alpha 3
+
+=head3 Installer-specific JavaScript: Removed from main, "dada_mail.js" File
+
+Installer-specific JavaScript has been removed from the main, "dada_mail.js" file, creating a smaller "dada_mail.js" file. 
+
+
+=head3 new, "dada_mail.user.js" file
+
+The, "dada_mail.user.js" file holds JavaScript for user-facing Dada Mail screens. At the moment, this is most client-side form validation for various user forms, including the Subscription Form. 
+
+The following new HTML can be seen in the head of the C<list_template.tmpl>
+
+	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery-1.8.2.min.js"></script>
+	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery.validate.js"></script>
+	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/dada_mail.user.js"></script>
+
+You may optionally add these lines to your own List Template to gain the same client-side valiation, but this is currently entirely optional. 
+
+Documentation on these lines will be made available, once the stable release of v6.5.0 is made. 
 
 =head1 6.4.3
 
