Let's make this a beta

--- a/dada/extras/documentation/pod_source/changes_6_x.pod
+++ b/dada/extras/documentation/pod_source/changes_6_x.pod
@@ -1,8 +1,8 @@
-=head1 6.5.0 alpha 3
+=head1 6.5.0 Beta 1
 
-=head2 Summary 6.5.0 alpha 3
+=head2 Summary 6.5.0 Beta 1
 
-=head2 Features 6.5.0 alpha 3
+=head2 Features 6.5.0 Beta 1
 
 =head3 New Plugin: Global Config
 
